--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,9 @@ node_modules/
 # air
 tmp/
 
+# temp uploads
+uploads/*
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,go
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
