--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "vgpx",
   "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "@preline/dropdown": "^2.0.2",
+    "preline": "^2.0.3"
   }
 }
