--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,8 @@ tmp/
 # temp uploads
 uploads/*
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,go
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
