--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "vgpx",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.7.3",
     "tailwindcss": "^3.4.1"
-  },
-  "dependencies": {
-    "@preline/dropdown": "^2.0.2",
-    "preline": "^2.0.3"
   }
 }
