--- a/air.toml
+++ b/air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "templ generate && go build -o ./tmp/main ./cmd"
   delay = 0
-  exclude_dir = ["assets", "tmp", "node_modules", "vendor", "testdata"]
+  exclude_dir = ["assets/dist", "tmp", "node_modules", "vendor", "testdata", "internal/migrate/migrations", "internal/queries"]
   exclude_file = []
   exclude_regex = ["_test.go", ".*_templ.go"]
   exclude_unchanged = false
