--- a/air.toml
+++ b/air.toml
@@ -5,9 +5,9 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "templ generate && go build -o ./tmp/main ./cmd"
+  cmd = "templ generate && go build -o ./tmp/main ."
   delay = 0
-  exclude_dir = ["assets/dist", "tmp", "node_modules", "vendor", "testdata", "internal/database/migrations", "internal/database/queries", "internal/queries"]
+  exclude_dir = ["assets/dist", "tmp", "node_modules", "vendor", "testdata", "db/migrations", "db/queries", "queries"]
   exclude_file = []
   exclude_regex = ["_test.go", ".*_templ.go"]
   exclude_unchanged = false
