--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "vgpx",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "alpinejs": "^3.13.7",
     "daisyui": "^4.7.3",
+    "esbuild": "^0.20.2",
+    "esbuild-plugin-copy": "^2.1.1",
+    "htmx.org": "^1.9.11",
     "tailwindcss": "^3.4.1"
   }
 }
