fix and refactor
- refactor uploads controller
- reset io seek after reading io file
- docker taskfile

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -28,3 +28,9 @@ tasks:
       - npm install
       - go mod download
       - go mod tidy
+  docker-up:
+    cmds:
+      - docker-compose up -d
+  docker-down:
+    cmds:
+      - docker-compose down --remove-orphans
