--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,7 +18,7 @@ tasks:
   build:
     deps: [build:esbuild, build:tailwind, generate:templ]
     cmds:
-      - go build -o ./bin/app ./main.go
+      - go build -o ./bin/app ./cmd/app/main.go
   clean:
     cmds:
       - go clean ./...
